2009-06-24  John W. Eaton  <jwe@octave.org>

	* pt-assign.cc (former_built_in_variables): Remove "ans" from the list.

2009-06-24  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code):
	Workaround sig_atomic_t != int.

2009-06-23  Jaroslav Hajek  <highegg@gmail.com>

	* quit.h (octave_quit_exception): Delete.
	(exit_status, quitting_gracefully): New globals.
	* quit.cc: Initialize them.
	(Fquit): Set the globals, simulate interrupt.
	(main_loop): Handle exit properly.
	* octave.cc (execute_eval_option_code): Ditto.
	(execute_command_line_file): Ditto.
	* pt-eval.cc (do_unwind_protect_cleanup_code):
	Fix order of unwind_protect calls.

2009-06-23  John W. Eaton  <jwe@octave.org>

	* oct-map.cc (Octave_map::squeeze, Octave_map::permute,
	Octave_map::transpose, Octave_map::reshape, Octave_map::concat):
	Preserve key order.

2009-06-22  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.cc (octave_cell::all_strings): Avoid duplicate conversions.

2009-06-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (Fsubsasgn): Uniquify shared value before assigning to it.

2009-06-17  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_octave_value::get_data):
	If octave_value::mex_get_data returns a valid pointer, mark it as
	foreign and return it instead of enumerating the types that can be
	handled directly.

	* ov-re-mat.h (octave_matrix::mex_get_data): New function.
	* ov-bool-mat.h (octave_bool_matrix::mex_get_data): Ditto.
	* ov-flt-re-mat.h (octave_float_matrix::mex_get_data): Ditto.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::mex_get_data): Ditto.
	* ov-base-mat.h (octave_base_matrix::mex_get_data): Delete.

2009-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (symbol_table::set_scope_and_context): Avoid checking
	error_state for setting context.

2009-06-12  Kai NODA  <nodakai@gmail.com>

	* ls-mat4.h: Fix include guard
	* ov-type-conv.h: Add missing include guard.

2009-06-12  Jaroslav Hajek  <highegg@gmail.com>
